# tiedpo

./: .gitignore  README.md
LLaVA-NeXT/: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  setup_dpo_env.sh  setup_env.sh
LLaVA-NeXT/data/: sample.json
LLaVA-NeXT/data_processing/: __init__.py  utils.py
LLaVA-NeXT/datagenerate_api/: data_generate.py
LLaVA-NeXT/llava/: __init__.py  mm_utils.py
LLaVA-NeXT/llava/model/: llava_arch.py
LLaVA-NeXT/llava/model/multimodal_resampler/: qformer.py
LLaVA-NeXT/llava/train/: llava_trainer.py  train_tie_dpo.py
LLaVA-NeXT/scripts/eval/: eval_qwen2_abgap.py  merge_lora_for_lmms_eval.py  run_3model_lmms_eval_and_summarize.sh  run_lmms_eval_10bench.sh  run_qwen2_7b_3model_abgap_eval.sh  summarize_qwen2_abgap_eval.py
LLaVA-NeXT/scripts/train/: TieDPO.sh  TieDPO_all_evidence.sh  TieDPO_eval_only.sh  run_lora_c1_minimal.sh
LLaVA-NeXT/trl/: __init__.py
LLaVA-NeXT/trl/trainer/: __init__.py  dpo_trainer.py  tie_dpo_trainer.py  vdpo_trainer.py  vdpo_trainer_svco_triples.py
Qwen3VL-TieDPO/: README.md
Qwen3VL-TieDPO/configs/: fsdp_full_shard_auto_wrap.json  zero3.json
Qwen3VL-TieDPO/qwen3vl_tiedpo/: __init__.py  data.py  loss.py  run_tie_dpo.py  trainer.py
Qwen3VL-TieDPO/scripts/: eval_qwen3_abgap.py  merge_qwen3vl_lora.py  run_qwen3vl_2model_lmms_eval_and_summarize.sh  run_qwen3vl_2model_mirb_eval.sh  run_qwen3vl_base_and_tiebench_eval.sh  run_qwen3vl_base_tiebench_eval.sh  run_qwen3vl_lmms_eval.sh  run_qwen3vl_tiedpo_stage1.sh
